# rust-actix-maud-webview-template

./: Cargo.toml  README.md
src/: main.rs
src/components/: header.rs  menu.rs
src/pages/: root.rs
